--- a/grid.html
+++ b/grid.html
@@ -30,8 +30,7 @@
             /* regarding to item styles */
             /* line-height: 50px;     the height is taken from content height */
             /* align-items: ; */
-            grid-template-areas: "Item1 Item1 Item2"
-                "Item1 Item1 Item2"
+            /* grid-template-areas: 1 / 1 / 4 / 2; */
 
         }
 
@@ -52,7 +51,7 @@
             grid-row-end: 4; */
             /* same as above */
             grid-row: 1/3;
-            grid-area: Item1
+            grid-area: 1 / 2 / 3 / 4
         }
 
         #c2 {
